--- a/signer/web/src/components/UnAuthorized/UnAuthorized.css
+++ b/signer/web/src/components/UnAuthorized/UnAuthorized.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 25px;
+  padding: 0;
 }
 
 .toggleToken {
