--- a/signer/web/src/containers/Root/Root.css
+++ b/signer/web/src/containers/Root/Root.css
@@ -7,4 +7,6 @@
   max-width: 100%;
   margin-right: auto;
   margin-left: auto;
+  padding: 0 25px;
+  box-sizing: border-box;
 }
